[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/popups/popup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/popups/settings.gd" type="Script" id=2]
[ext_resource path="res://images/popups/settings_window_bg.png" type="Texture" id=3]
[ext_resource path="res://images/popups/switch_on.png" type="Texture" id=4]
[ext_resource path="res://images/popups/switch_off.png" type="Texture" id=5]
[ext_resource path="res://images/popups/reset_progress_button.png" type="Texture" id=6]
[ext_resource path="res://images/popups/reset_progress_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://images/popups/exit_button.png" type="Texture" id=8]
[ext_resource path="res://images/popups/exit_button_pressed.png" type="Texture" id=9]
[ext_resource path="res://images/popups/go_back.png" type="Texture" id=10]
[ext_resource path="res://images/popups/go_back_pressed.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]

resource_name = "close_settings"
length = 0.12
loop = false
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("c/close_button:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("window:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("c/close_button:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 625.0, 1140.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("c/close_button:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 748.0, 1263.0 ]
}

[sub_resource type="Animation" id=2]

length = 0.12
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("c/close_button:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("window:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("c/close_button:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1140.0, 625.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("c/close_button:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1263.0, 748.0 ]
}

[sub_resource type="GDScript" id=3]

script/source = "extends Control


func _ready():
	var h = admob.getHeight()
	set_position(
		get_position() - Vector2(0, h)
	)
"

[node name="settings" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="animation" parent="." index="0"]
anims/close_settings = SubResource( 1 )
anims/open_settings = SubResource( 2 )

[node name="window" parent="." index="2"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -486.0
margin_top = -687.0
margin_right = 487.0
margin_bottom = 473.0
mouse_filter = 2
texture = ExtResource( 3 )
_sections_unfolded = [ "Mouse", "Pause", "Rect", "Transform", "Visibility" ]

[node name="blocker" type="Control" parent="window" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 155.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="audio" type="Control" parent="window" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 496.0
margin_top = 577.0
margin_right = 536.0
margin_bottom = 617.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="music_control" type="Control" parent="window/audio" index="0"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -306.0
margin_bottom = -306.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="switch" type="TextureButton" parent="window/audio/music_control" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 93.0
margin_right = 323.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="sound_control" type="Control" parent="window/audio" index="1"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -76.0
margin_bottom = -76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="switch" type="TextureButton" parent="window/audio/sound_control" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 57.0
margin_right = 323.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="reset_progress" type="TextureButton" parent="window" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 212.0
margin_top = 735.0
margin_right = 762.0
margin_bottom = 879.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="exit_button" type="TextureButton" parent="window" index="3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = 327.0
margin_right = 194.0
margin_bottom = 461.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="c" type="Control" parent="." index="3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -1764.0
margin_right = 540.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = SubResource( 3 )
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="close_button" type="TextureButton" parent="c" index="0"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.5
margin_top = 1140.0
margin_right = 129.5
margin_bottom = 1263.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
_sections_unfolded = [ "Margin", "Rect", "Textures", "Visibility" ]

[connection signal="toggled" from="window/audio/music_control/switch" to="." method="_on_switch_music_toggled"]
[connection signal="toggled" from="window/audio/sound_control/switch" to="." method="_on_switch_sound_toggled"]
[connection signal="pressed" from="window/reset_progress" to="." method="_on_reset_progress_pressed"]
[connection signal="pressed" from="window/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="c/close_button" to="." method="_on_close_button_pressed"]
